--- a/config.ini.template
+++ b/config.ini.template
@@ -4,5 +4,5 @@ DB_DATABASE =
 DB_USERNAME = 
 DB_PASSWORD = 
 # Either use linux or windows version of driver definition
-# DB_DRIVER="{SQL Server}"
+# DB_DRIVER= {SQL Server}
 DB_DRIVER = {/opt/microsoft/msodbcsql17/lib64/libmsodbcsql-17.5.so.2.1}
